force-app/main/default/objects/ProjectServiceQuestionRule__c/ProjectServiceQuestionRule__c.object-meta.xml
<CustomObject>
    <description>Project Service Question Rule</description>
    <label>Project Service Question Rule</label>
    <nameField>
        <displayFormat>PQR-{00000000}</displayFormat>
        <label>Project Service Question Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Question Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>