force-app/main/default/objects/ProjectServiceQuestionRule__c/fields/DefinedResponseValue__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseValue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defined Response Value</label>
    <referenceTo>ProjectServiceQuestionDefinedResponse__c</referenceTo>
    <relationshipLabel>Service Question Rules</relationshipLabel>
    <relationshipName>Service_Question_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>