force-app/main/default/objects/ProjectServiceQuestionRule__c/fields/ParentProjectServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectServiceQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project Service Question</label>
    <referenceTo>ProjectServiceQuestion__c</referenceTo>
    <relationshipLabel>Service Question Rules</relationshipLabel>
    <relationshipName>Service_Question_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>