force-app/main/default/objects/ProjectServiceQuestionRule__c/fields/ParentProjectServiceQuestionText__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectServiceQuestionText__c</fullName>
    <formula>ParentProjectServiceQuestion__r.QuestionText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Project Service Question Text</label>
    <type>Text</type>
</CustomField>