force-app/main/default/objects/ProjectServiceQuestionRule__c/fields/ParentProjectServiceQuestionType__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectServiceQuestionType__c</fullName>
    <formula>ParentProjectServiceQuestion__r.QuestionType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Project Service Question Type</label>
    <type>Text</type>
</CustomField>