force-app/main/default/objects/ProjectServiceQuestionRule__c/fields/ProjectServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceQuestion__c</fullName>
    <label>Project Service Question</label>
    <referenceTo>ProjectServiceQuestion__c</referenceTo>
    <relationshipLabel>Service Question Rules (Project Service Question)</relationshipLabel>
    <relationshipName>Service_Question_Rules1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>