force-app/main/default/objects/ProjectServiceQuestionRule__c/fields/ProjectServiceQuestionText__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceQuestionText__c</fullName>
    <formula>ProjectServiceQuestion__r.QuestionText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Service Question Text</label>
    <type>Text</type>
</CustomField>